--- a/sass/hosting.css
+++ b/sass/hosting.css
@@ -24,7 +24,6 @@ html {
 }
 
 .contenedor-paneles {
-  padding: 4rem;
   width: 100%;
   background-color: white;
   overflow: hidden;
@@ -120,8 +119,8 @@ h1 {
     align-items: center;
   }
   .carta {
-    width: 200px;
-    margin: 2em;
+    width: 90%;
+    margin-bottom: 6em;
   }
   .carta h3 {
     font-size: 1.8rem;
@@ -133,6 +132,9 @@ h1 {
     font-size: 1rem;
     margin-left: 1.5rem;
     margin-top: 0.5rem;
+  }
+  .carta:hover {
+    transform: none;
   }
   .contratar-1 {
     margin-top: 3rem;
@@ -170,7 +172,7 @@ h1 {
   }
   .carta {
     width: 300px;
-    margin: 2em;
+    margin-bottom: 2em;
   }
   .carta h3 {
     font-size: 1.5rem;
@@ -222,7 +224,7 @@ h1 {
     margin-bottom: 2rem;
   }
   .carta {
-    width: 300px;
+    width: 350px;
     margin-bottom: 2em;
   }
   .carta h3 {
@@ -332,8 +334,5 @@ h1 {
   .contratar-3 {
     margin-top: 3rem;
     margin-bottom: 2rem;
-  }
-  h1 {
-    font-size: 2rem;
   }
 }/*# sourceMappingURL=hosting.css.map */
