--- a/sass/hosting.scss
+++ b/sass/hosting.scss
@@ -21,7 +21,6 @@ html {
 	}
 }
 .contenedor-paneles {
-	padding: 4rem;
 	width: 100%;
 	background-color: white;
 	overflow: hidden;
@@ -113,8 +112,8 @@ h1 {
 		align-items: center;
 	}
 	.carta {
-		width: 200px;
-		margin: 2em;
+		width: 90%;
+		margin-bottom: 6em;
 		h3 {
 			font-size: 1.8rem;
 		}
@@ -127,6 +126,9 @@ h1 {
 				margin-left: 1.5rem;
 				margin-top: 0.5rem;
 			}
+		}
+		&:hover {
+			transform: none;
 		}
 	}
 	.contratar-1 {
@@ -167,7 +169,7 @@ h1 {
 	}
 	.carta {
 		width: 300px;
-		margin: 2em;
+		margin-bottom: 2em;
 		h3 {
 			font-size: 1.5rem;
 		}
@@ -223,7 +225,7 @@ h1 {
 		margin-bottom: 2rem;
 	}
 	.carta {
-		width: 300px;
+		width: 350px;
 		margin-bottom: 2em;
 		h3 {
 			font-size: 2rem;
@@ -343,8 +345,5 @@ h1 {
 	.contratar-3 {
 		margin-top: 3rem;
 		margin-bottom: 2rem;
-	}
-	h1 {
-		font-size: 2rem;
 	}
 }
