--- a/sass/mantenimiento.css
+++ b/sass/mantenimiento.css
@@ -24,7 +24,6 @@ html {
 }
 
 .contenedor-paneles {
-  padding: 4rem;
   width: 100%;
   background-color: white;
   overflow: hidden;
@@ -120,8 +119,8 @@ h1 {
     align-items: center;
   }
   .carta {
-    width: 200px;
-    margin: 2em;
+    width: 90%;
+    margin-bottom: 6em;
   }
   .carta h3 {
     font-size: 1.8rem;
@@ -133,6 +132,9 @@ h1 {
     font-size: 1rem;
     margin-left: 1.5rem;
     margin-top: 0.5rem;
+  }
+  .carta:hover {
+    transform: none;
   }
   .contratar-1 {
     margin-top: 3rem;
@@ -170,7 +172,7 @@ h1 {
   }
   .carta {
     width: 300px;
-    margin: 2em;
+    margin-bottom: 2em;
   }
   .carta h3 {
     font-size: 1.5rem;
@@ -223,7 +225,7 @@ h1 {
   }
   .carta {
     width: 300px;
-    margin: 2em;
+    margin-bottom: 2em;
   }
   .carta h3 {
     font-size: 2rem;
@@ -263,7 +265,7 @@ h1 {
   }
   .carta {
     width: 300px;
-    margin: 2em;
+    margin-bottom: 2em;
   }
   .carta h3 {
     font-size: 1.8rem;
@@ -306,7 +308,7 @@ h1 {
   }
   .carta {
     width: 600px;
-    margin-bottom: 6rem;
+    margin-bottom: 5rem;
   }
   .carta h3 {
     font-size: 2.8rem;
