--- a/css/css-antiguo/mantenimiento.css
+++ b/css/css-antiguo/mantenimiento.css
@@ -20,7 +20,6 @@ html {
 
 /* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
 .contenedor-paneles{
-  padding: 4rem;
   width: 100%;
   background-color: white;
   overflow: hidden;
@@ -127,8 +126,8 @@ h1{
       align-items: center;
   }
   .carta{
-      width: 200px;
-      margin: 2em;
+      width: 90%;
+      margin-bottom: 6em;
   }
   .carta h3{
       font-size: 1.8rem;
@@ -153,6 +152,9 @@ h1{
       margin-top: 3rem;
       margin-bottom: 2rem;
   }  
+  .carta:hover{
+    transform: none; 
+  }
  }
  
 @media (min-width:481px) and (max-width: 779px){
@@ -178,7 +180,7 @@ h1{
   }
   .carta{
      width: 300px;
-     margin: 2em;
+     margin-bottom: 2em;
   }
   .carta h3{
       font-size: 1.5rem;
@@ -232,7 +234,7 @@ h1{
   }
   .carta{
      width: 300px;
-     margin: 2em;
+     margin-bottom: 2em;
   }
   .carta h3{
       font-size: 2rem;
@@ -273,7 +275,7 @@ h1{
   }
   .carta{
      width: 300px;
-     margin: 2em;
+     margin-bottom: 2em;
   }
   .carta h3{
       font-size: 1.8rem;
@@ -317,7 +319,7 @@ h1{
   }
   .carta{
      width: 600px;
-     margin-bottom: 6rem;
+     margin-bottom: 5rem;
   }
   .carta h3{
       font-size: 2.8rem;
