--- a/sass/contacto.css
+++ b/sass/contacto.css
@@ -60,13 +60,22 @@ html {
   transition: all 0.5s;
 }
 
+input[type=text] {
+  width: 90%;
+  height: 40px;
+}
+
+input[type=email] {
+  width: 90%;
+  height: 40px;
+}
+
 textarea {
-  width: 100%;
+  width: 90%;
   height: 100px;
   border: 1px solid #f6f6f6;
   border-radius: 3px;
-  background-color: var(--);
-  margin: 8px 0;
+  margin: auto;
   resize: none;
   display: block;
 }
@@ -94,7 +103,15 @@ h1 {
     margin-bottom: 10rem;
   }
   .formulario label {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+  }
+  input[type=text] {
+    width: 90%;
+    height: 20px;
+  }
+  input[type=email] {
+    width: 90%;
+    height: 20px;
   }
 }
 @media (min-width: 481px) and (max-width: 779px) {
@@ -119,6 +136,14 @@ h1 {
   .formulario label {
     font-size: 1.5rem;
   }
+  input[type=text] {
+    width: 90%;
+    height: 25px;
+  }
+  input[type=email] {
+    width: 90%;
+    height: 25px;
+  }
 }
 @media (min-width: 780px) {
   .contenedor-imagen {
@@ -139,6 +164,14 @@ h1 {
   .formulario {
     margin-bottom: 12rem;
   }
+  input[type=text] {
+    width: 90%;
+    height: 30px;
+  }
+  input[type=email] {
+    width: 90%;
+    height: 30px;
+  }
 }
 @media (min-width: 1200px) {
   .contenedor-imagen {
@@ -152,6 +185,9 @@ h1 {
     text-align: center;
     font-size: 2.5rem;
   }
+  .formulario {
+    margin-bottom: 10rem;
+  }
 }
 @media (min-width: 2000px) {
   .contenedor-imagen {
@@ -161,8 +197,26 @@ h1 {
     font-size: 4rem;
   }
   .contenedor-titulo h2 {
-    margin-top: 2rem;
+    margin-top: 2.5rem;
     text-align: center;
-    font-size: 3.1rem;
+    font-size: 3.5rem;
+  }
+  .formulario {
+    margin-bottom: 10rem;
+    margin-top: 10rem;
+  }
+  .formulario label {
+    font-size: 2.5rem;
+  }
+  input[type=text] {
+    width: 90%;
+    height: 50px;
+  }
+  input[type=email] {
+    width: 90%;
+    height: 50px;
+  }
+  .boton {
+    padding: 1.5rem;
   }
 }/*# sourceMappingURL=contacto.css.map */
