--- a/sass/contacto.scss
+++ b/sass/contacto.scss
@@ -53,13 +53,20 @@ html {
 		transition: all .5s;
 	}
 }
+input[type=text] {
+	width: 90%;
+	height: 40px;
+}
+input[type=email] {
+	width: 90%;
+	height: 40px;
+}
 textarea {
-	width: 100%;
+	width: 90%;
 	height: 100px;
 	border: 1px solid #f6f6f6;
 	border-radius: 3px;
-	background-color: var(-- );
-	margin: 8px 0;
+	margin: auto;
 	resize: none;
 	display: block;
 }
@@ -86,8 +93,16 @@ h1 {
 		width: 80%;
 		margin-bottom: 10rem;
 		label {
-			font-size: 1.5rem;
+			font-size: 1.2rem;
 		}
+	}
+	input[type=text] {
+		width: 90%;
+		height: 20px;
+	}
+	input[type=email] {
+		width: 90%;
+		height: 20px;
 	}
 }
 @media (min-width:481px) and (max-width: 779px) {
@@ -114,6 +129,14 @@ h1 {
 			font-size: 1.5rem;
 		}
 	}
+	input[type=text] {
+		width: 90%;
+		height: 25px;
+	}
+	input[type=email] {
+		width: 90%;
+		height: 25px;
+	}
 }
 @media (min-width: 780px) {
 	.contenedor-imagen {
@@ -136,6 +159,14 @@ h1 {
 	.formulario {
 		margin-bottom: 12rem;
 	}
+	input[type=text] {
+		width: 90%;
+		height: 30px;
+	}
+	input[type=email] {
+		width: 90%;
+		height: 30px;
+	}
 }
 @media (min-width: 1200px) {
 	.contenedor-imagen {
@@ -151,6 +182,9 @@ h1 {
 			font-size: 2.5rem;
 		}
 	}
+	.formulario {
+		margin-bottom: 10rem;
+	}
 }
 @media (min-width: 2000px) {
 	.contenedor-imagen {
@@ -161,9 +195,27 @@ h1 {
 	}
 	.contenedor-titulo {
 		h2 {
-			margin-top: 2rem;
+			margin-top: 2.5rem;
 			text-align: center;
-			font-size: 3.1rem;
+			font-size: 3.5rem;
 		}
+	}
+	.formulario {
+		margin-bottom: 10rem;
+		margin-top: 10rem;
+		label {
+			font-size: 2.5rem;
+		}
+	}
+	input[type=text] {
+		width: 90%;
+		height: 50px;
+	}
+	input[type=email] {
+		width: 90%;
+		height: 50px;
+	}
+	.boton {
+		padding: 1.5rem;
 	}
 }
