--- a/sass/daw.scss
+++ b/sass/daw.scss
@@ -20,7 +20,6 @@ html {
 	}
 }
 .contenedor-paneles {
-	padding: 4rem;
 	width: 100%;
 	background-color: white;
 	overflow: hidden;
@@ -112,8 +111,8 @@ h1 {
 		align-items: center;
 	}
 	.carta {
-		width: 200px;
-		margin-bottom: 2em;
+		width: 90%;
+		margin-bottom: 6em;
 		h3 {
 			font-size: 1.8rem;
 		}
@@ -126,6 +125,9 @@ h1 {
 				margin-left: 1.5rem;
 				margin-top: 0.5rem;
 			}
+		}
+		&:hover {
+			transform: none;
 		}
 	}
 	.contratar-1 {
@@ -222,8 +224,8 @@ h1 {
 		margin-bottom: 2rem;
 	}
 	.carta {
-		width: 300px;
-		margin: 2em;
+		width: 350px;
+		margin-bottom: 2em;
 		h3 {
 			font-size: 2rem;
 		}
@@ -340,8 +342,5 @@ h1 {
 	.contratar-3 {
 		margin-top: 3rem;
 		margin-bottom: 2rem;
-	}
-	h1 {
-		font-size: 2rem;
 	}
 }
