--- a/sass/contacto.css
+++ b/sass/contacto.css
@@ -3,6 +3,7 @@
 /* FORMULARIO */
 /* H1 QUE CONTIENE -> (CONTACTO) */
 /* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
+
 * {
   font-family: Quantico;
 }
@@ -25,6 +26,10 @@ html {
 .contenedor-imagen {
   display: flex;
   align-items: center;
+  background-image: url("../img/contacto/contacto.jpg");
+  background-size: cover;
+  height: 300px;
+  background-position: center;
 }
 .contenedor-imagen img {
   width: 100%;
@@ -89,6 +94,7 @@ h1 {
 @media (max-width: 480px) {
   .contenedor-imagen {
     width: 100%;
+    background-image: url("../img/contacto/contacto300.jpg");
   }
   .contenedor-imagen h1 {
     font-size: 1.5rem;
@@ -117,10 +123,7 @@ h1 {
 @media (min-width: 481px) and (max-width: 779px) {
   .contenedor-imagen {
     width: 100%;
-  }
-  .contenedor-imagen img {
-    width: 100%;
-    height: 400px;
+    background-image: url("../img/contacto/contacto700.jpg");
   }
   .contenedor-imagen h1 {
     font-size: 2rem;
@@ -149,10 +152,6 @@ h1 {
   .contenedor-imagen {
     width: 100%;
   }
-  .contenedor-imagen img {
-    width: 100%;
-    height: 400px;
-  }
   .contenedor-imagen h1 {
     font-size: 2.5rem;
   }
@@ -176,6 +175,8 @@ h1 {
 @media (min-width: 1200px) {
   .contenedor-imagen {
     width: 100%;
+    background-image: url("../img/contacto/contacto1000.jpg");
+    height: 400px;
   }
   .contenedor-imagen h1 {
     font-size: 3rem;
@@ -192,6 +193,8 @@ h1 {
 @media (min-width: 2000px) {
   .contenedor-imagen {
     width: 100%;
+    background-image: url("../img/contacto/contacto1600.jpg");
+    height: 400px;
   }
   .contenedor-imagen h1 {
     font-size: 4rem;
