--- a/sass/contacto.scss
+++ b/sass/contacto.scss
@@ -1,4 +1,9 @@
 /* CONTACTO */
+/* CONTENEDOR IMAGEN */
+/* FORMULARIO */
+/* H1 QUE CONTIENE -> (CONTACTO) */
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
+/*# sourceMappingURL=contacto.css.map */
 * {
 	font-family: Quantico;
 }
@@ -15,10 +20,13 @@ html {
 		margin-bottom: 2rem;
 	}
 }
-/* CONTENEDOR IMAGEN */
 .contenedor-imagen {
 	display: flex;
 	align-items: center;
+	background-image: url('../img/contacto/contacto.jpg');
+	background-size: cover;
+	height: 300px;
+	background-position: center;
 	img {
 		width: 100%;
 	}
@@ -28,7 +36,6 @@ html {
 	z-index: 100;
 	width: 100%;
 }
-/* FORMULARIO */
 .formulario {
 	width: 50%;
 	padding: 16px;
@@ -44,11 +51,11 @@ html {
 	border-radius: 1rem;
 	padding: 2%;
 	background-color: rgb(255, 255, 255);
-	transition: all .5s;
+	transition: all 0.5s;
 	&:hover {
 		color: black;
 		background-color: gold;
-		transition: all .5s;
+		transition: all 0.5s;
 	}
 }
 input[type=text] {
@@ -68,17 +75,15 @@ textarea {
 	resize: none;
 	display: block;
 }
-/* H1 QUE CONTIENE -> (CONTACTO) */
 h1 {
 	text-align: center;
 	font-size: 4rem;
 	color: white;
 }
-
-/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url('../img/contacto/contacto300.jpg');
 		h1 {
 			font-size: 1.5rem;
 		}
@@ -106,14 +111,10 @@ h1 {
 		height: 20px;
 	}
 }
-
-@media (min-width:481px) and (max-width: 779px) {
+@media (min-width: 481px) and (max-width: 779px) {
 	.contenedor-imagen {
 		width: 100%;
-		img {
-			width: 100%;
-			height: 400px;
-		}
+		background-image: url('../img/contacto/contacto700.jpg');
 		h1 {
 			font-size: 2rem;
 		}
@@ -140,14 +141,9 @@ h1 {
 		height: 25px;
 	}
 }
-
 @media (min-width: 780px) {
 	.contenedor-imagen {
 		width: 100%;
-		img {
-			width: 100%;
-			height: 400px;
-		}
 		h1 {
 			font-size: 2.5rem;
 		}
@@ -171,10 +167,11 @@ h1 {
 		height: 30px;
 	}
 }
-
 @media (min-width: 1200px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url('../img/contacto/contacto1000.jpg');
+		height: 400px;
 		h1 {
 			font-size: 3rem;
 		}
@@ -190,10 +187,11 @@ h1 {
 		margin-bottom: 10rem;
 	}
 }
-
 @media (min-width: 2000px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url('../img/contacto/contacto1600.jpg');
+		height: 400px;
 		h1 {
 			font-size: 4rem;
 		}
