--- a/sass/daw.scss
+++ b/sass/daw.scss
@@ -1,4 +1,10 @@
+@charset "UTF-8";
 /* DESARROLLO WEB */
+/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
+/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
+/* BOTONES QUE ESTÁN DENTRO DE LAS CARTAS */
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
+/*# sourceMappingURL=daw.css.map */
 * {
 	font-family: Quantico;
 	margin: 0;
@@ -11,6 +17,10 @@ html {
 .contenedor-imagen {
 	display: flex;
 	align-items: center;
+	background-image: url("../img/daw/code.jpg");
+	background-size: cover;
+	height: 300px;
+	background-position: center;
 	img {
 		width: 100%;
 	}
@@ -27,20 +37,18 @@ html {
 	z-index: 100;
 	width: 100%;
 }
-/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
 h1 {
 	text-align: center;
 	font-size: 4rem;
 	color: white;
 }
-/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta {
 	background-color: #27282F;
 	border-radius: 2.5rem;
 	margin: 2.5em;
 	width: 20rem;
 	color: white;
-	transition: transform .2s;
+	transition: transform 0.2s;
 	h3 {
 		color: white;
 		text-align: center;
@@ -63,7 +71,6 @@ h1 {
 		transform: scale(1.1);
 	}
 }
-/* BOTONES QUE ESTÁN DENTRO DE LAS CARTAS */
 .contratar {
 	display: flex;
 	justify-content: center;
@@ -91,10 +98,10 @@ h1 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
-/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url("../img/daw/code300.jpg");
 		h1 {
 			font-size: 1.5rem;
 		}
@@ -143,14 +150,10 @@ h1 {
 		margin-bottom: 2rem;
 	}
 }
-
-@media (min-width:481px) and (max-width: 779px) {
+@media (min-width: 481px) and (max-width: 779px) {
 	.contenedor-imagen {
 		width: 100%;
-		img {
-			width: 100%;
-			height: 400px;
-		}
+		background-image: url("../img/daw/code700.jpg");
 		h1 {
 			font-size: 2rem;
 		}
@@ -197,14 +200,9 @@ h1 {
 		margin-bottom: 2rem;
 	}
 }
-
 @media (min-width: 780px) {
 	.contenedor-imagen {
 		width: 100%;
-		img {
-			width: 100%;
-			height: 400px;
-		}
 		h1 {
 			font-size: 2.5rem;
 		}
@@ -255,10 +253,11 @@ h1 {
 		margin-bottom: 2rem;
 	}
 }
-
 @media (min-width: 1200px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url("../img/daw/code1000.jpg");
+		height: 400px;
 		h1 {
 			font-size: 3rem;
 		}
@@ -303,10 +302,11 @@ h1 {
 		font-size: 2rem;
 	}
 }
-
 @media (min-width: 2000px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url("../img/daw/code1600.jpg");
+		height: 400px;
 		h1 {
 			font-size: 4rem;
 		}
