--- a/sass/mantenimiento.scss
+++ b/sass/mantenimiento.scss
@@ -1,4 +1,10 @@
 /* MANTENIMIENTO */
+/* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
+/* H1 QUE CONTIENE -> (MANTENIMIENTO) */
+/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
+/* Botones dentro de las cartas */
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
+/*# sourceMappingURL=mantenimiento.css.map */
 * {
 	font-family: Quantico;
 	margin: 0;
@@ -11,11 +17,14 @@ html {
 .contenedor-imagen {
 	display: flex;
 	align-items: center;
+	background-image: url("../img/mantenimiento/manteni.jpg");
+	background-size: cover;
+	height: 300px;
+	background-position: center;
 	img {
 		width: 100%;
 	}
 }
-/* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
 .contenedor-paneles {
 	width: 100%;
 	background-color: white;
@@ -28,20 +37,18 @@ html {
 	z-index: 100;
 	width: 100%;
 }
-/* H1 QUE CONTIENE -> (MANTENIMIENTO) */
 h1 {
 	text-align: center;
 	font-size: 4rem;
 	color: white;
 }
-/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta {
 	background-color: #27282F;
 	border-radius: 2.5rem;
 	margin: 2.5em;
 	width: 20rem;
 	color: white;
-	transition: transform .2s;
+	transition: transform 0.2s;
 	h3 {
 		color: white;
 		text-align: center;
@@ -64,7 +71,6 @@ h1 {
 		transform: scale(1.1);
 	}
 }
-/* Botones dentro de las cartas */
 .contratar {
 	display: flex;
 	justify-content: center;
@@ -92,10 +98,10 @@ h1 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
-/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url("../img/mantenimiento/manteni300.jpg");
 		h1 {
 			font-size: 1.5rem;
 		}
@@ -144,14 +150,10 @@ h1 {
 		margin-bottom: 2rem;
 	}
 }
-
-@media (min-width:481px) and (max-width: 779px) {
+@media (min-width: 481px) and (max-width: 779px) {
 	.contenedor-imagen {
 		width: 100%;
-		img {
-			width: 100%;
-			height: 400px;
-		}
+		background-image: url("../img/mantenimiento/manteni700.jpg");
 		h1 {
 			font-size: 2rem;
 		}
@@ -198,14 +200,9 @@ h1 {
 		margin-bottom: 2rem;
 	}
 }
-
 @media (min-width: 780px) {
 	.contenedor-imagen {
 		width: 100%;
-		img {
-			width: 100%;
-			height: 400px;
-		}
 		h1 {
 			font-size: 2.5rem;
 		}
@@ -256,10 +253,11 @@ h1 {
 		margin-bottom: 2rem;
 	}
 }
-
 @media (min-width: 1200px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url("../img/mantenimiento/manteni1000.jpg");
+		height: 400px;
 		h1 {
 			font-size: 3rem;
 		}
@@ -304,10 +302,11 @@ h1 {
 		font-size: 2rem;
 	}
 }
-
 @media (min-width: 2000px) {
 	.contenedor-imagen {
 		width: 100%;
+		background-image: url("../img/mantenimiento/manteni1600.jpg");
+		height: 400px;
 		h1 {
 			font-size: 4rem;
 		}
