--- a/sass/contacto.scss
+++ b/sass/contacto.scss
@@ -36,6 +36,10 @@ html {
 	z-index: 100;
 	width: 100%;
 }
+input{
+	outline: none;
+	padding: .5rem;
+}
 .formulario {
 	width: 50%;
 	padding: 16px;
