--- a/sass/daw.scss
+++ b/sass/daw.scss
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 /* DESARROLLO WEB */
+/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
+/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
+/* BOTONES QUE ESTÁN DENTRO DE LAS CARTAS */
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 /*# sourceMappingURL=daw.css.map */
 * {
 	font-family: Quantico;
@@ -33,13 +37,11 @@ html {
 	z-index: 100;
 	width: 100%;
 }
-/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
 h1 {
 	text-align: center;
 	font-size: 4rem;
 	color: white;
 }
-/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta {
 	background-color: #27282F;
 	border-radius: 2.5rem;
@@ -69,7 +71,6 @@ h1 {
 		transform: scale(1.1);
 	}
 }
-/* BOTONES QUE ESTÁN DENTRO DE LAS CARTAS */
 .contratar {
 	display: flex;
 	justify-content: center;
@@ -97,7 +98,6 @@ h1 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
-/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px) {
 	.contenedor-imagen {
 		width: 100%;
@@ -219,7 +219,8 @@ h1 {
 		width: 100%;
 		background-color: white;
 		overflow: hidden;
-		display: inline-flex;
+		display: flex;
+		flex-wrap: wrap;
 		justify-content: center;
 		margin-bottom: 2rem;
 	}
@@ -311,12 +312,23 @@ h1 {
 			font-size: 4rem;
 		}
 	}
+	.contenedor-paneles {
+		width: 100%;
+		background-color: white;
+		flex-wrap: nowrap;
+		overflow: hidden;
+		display: inline-flex;
+		justify-content: center;
+	}
 	.contenedor-titulo {
 		h2 {
 			margin-top: 2rem;
 			text-align: center;
 			font-size: 3.1rem;
 		}
+	}
+	.contratar {
+		padding: 1rem;
 	}
 	.carta {
 		width: 600px;
