--- a/sass/hosting.scss
+++ b/sass/hosting.scss
@@ -1,4 +1,9 @@
 /* HOSTING */
+/* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
+/* H1 QUE CONTIENE -> (HOSTING) */
+/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
+/* Botones dentro de las cartas */
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 /*# sourceMappingURL=hosting.css.map */
 * {
 	font-family: Quantico;
@@ -12,7 +17,7 @@ html {
 .contenedor-imagen {
 	display: flex;
 	align-items: center;
-	background-image: url('../img/hosting/hosting.jpg');
+	background-image: url("../img/hosting/hosting.jpg");
 	background-size: cover;
 	height: 300px;
 	background-position: center;
@@ -20,7 +25,6 @@ html {
 		width: 100%;
 	}
 }
-/* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
 .contenedor-paneles {
 	width: 100%;
 	background-color: white;
@@ -33,13 +37,11 @@ html {
 	z-index: 100;
 	width: 100%;
 }
-/* H1 QUE CONTIENE -> (HOSTING) */
 h1 {
 	text-align: center;
 	font-size: 4rem;
 	color: white;
 }
-/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta {
 	background-color: #27282F;
 	border-radius: 2.5rem;
@@ -69,7 +71,6 @@ h1 {
 		transform: scale(1.1);
 	}
 }
-/* Botones dentro de las cartas */
 .contratar {
 	display: flex;
 	justify-content: center;
@@ -97,11 +98,10 @@ h1 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
-/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px) {
 	.contenedor-imagen {
 		width: 100%;
-		background-image: url('../img/hosting/hosting300.jpg');
+		background-image: url("../img/hosting/hosting300.jpg");
 		h1 {
 			font-size: 1.5rem;
 		}
@@ -153,7 +153,7 @@ h1 {
 @media (min-width: 481px) and (max-width: 779px) {
 	.contenedor-imagen {
 		width: 100%;
-		background-image: url('../img/hosting/hosting700.jpg');
+		background-image: url("../img/hosting/hosting700.jpg");
 		h1 {
 			font-size: 2rem;
 		}
@@ -219,7 +219,8 @@ h1 {
 		width: 100%;
 		background-color: white;
 		overflow: hidden;
-		display: inline-flex;
+		display: flex;
+		flex-wrap: wrap;
 		justify-content: center;
 		margin-bottom: 2rem;
 	}
@@ -256,7 +257,7 @@ h1 {
 @media (min-width: 1200px) {
 	.contenedor-imagen {
 		width: 100%;
-		background-image: url('../img/hosting/hosting1000.jpg');
+		background-image: url("../img/hosting/hosting1000.jpg");
 		height: 400px;
 		h1 {
 			font-size: 3rem;
@@ -307,11 +308,19 @@ h1 {
 @media (min-width: 2000px) {
 	.contenedor-imagen {
 		width: 100%;
-		background-image: url('../img/hosting/hosting1600.jpg');
+		background-image: url("../img/hosting/hosting1600.jpg");
 		height: 400px;
 		h1 {
 			font-size: 4rem;
 		}
+	}
+	.contenedor-paneles {
+		width: 100%;
+		background-color: white;
+		flex-wrap: nowrap;
+		overflow: hidden;
+		display: inline-flex;
+		justify-content: center;
 	}
 	.contenedor-titulo {
 		h2 {
@@ -319,6 +328,9 @@ h1 {
 			text-align: center;
 			font-size: 3.1rem;
 		}
+	}
+	.contratar {
+		padding: 1rem;
 	}
 	.carta {
 		width: 600px;
