--- a/sass/mantenimiento.scss
+++ b/sass/mantenimiento.scss
@@ -1,4 +1,9 @@
 /* MANTENIMIENTO */
+/* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
+/* H1 QUE CONTIENE -> (MANTENIMIENTO) */
+/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
+/* Botones dentro de las cartas */
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 /*# sourceMappingURL=mantenimiento.css.map */
 * {
 	font-family: Quantico;
@@ -20,7 +25,6 @@ html {
 		width: 100%;
 	}
 }
-/* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
 .contenedor-paneles {
 	width: 100%;
 	background-color: white;
@@ -33,14 +37,11 @@ html {
 	z-index: 100;
 	width: 100%;
 }
-
-/* H1 QUE CONTIENE -> (MANTENIMIENTO) */
 h1 {
 	text-align: center;
 	font-size: 4rem;
 	color: white;
 }
-/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta {
 	background-color: #27282F;
 	border-radius: 2.5rem;
@@ -70,7 +71,6 @@ h1 {
 		transform: scale(1.1);
 	}
 }
-/* Botones dentro de las cartas */
 .contratar {
 	display: flex;
 	justify-content: center;
@@ -98,7 +98,6 @@ h1 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
-/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px) {
 	.contenedor-imagen {
 		width: 100%;
@@ -220,7 +219,8 @@ h1 {
 		width: 100%;
 		background-color: white;
 		overflow: hidden;
-		display: inline-flex;
+		display: flex;
+		flex-wrap: wrap;
 		justify-content: center;
 		margin-bottom: 2rem;
 	}
@@ -312,12 +312,23 @@ h1 {
 			font-size: 4rem;
 		}
 	}
+	.contenedor-paneles {
+		width: 100%;
+		background-color: white;
+		flex-wrap: nowrap;
+		overflow: hidden;
+		display: inline-flex;
+		justify-content: center;
+	}
 	.contenedor-titulo {
 		h2 {
 			margin-top: 2rem;
 			text-align: center;
 			font-size: 3.1rem;
 		}
+	}
+	.contratar {
+		padding: 1rem;
 	}
 	.carta {
 		width: 600px;
